# Sentinel-Iac

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Project-spec.md  README.md  alembic.ini  docker-compose.yml  docker-results.sarif  enriched_test.sarif  k8s-results.sarif  pyproject.toml
.github/action/: action.yml
.github/workflows/: ci.yml
data/: nist800-53.json
deploy/helm/sentinel-iac/: Chart.yaml  values.yaml
docs/: blog-validation-loop.md
evals/: golden.yaml  report.md  run_eval.py
evals/fixtures/docker-goat/: Dockerfile
evals/fixtures/k8s-goat/: pod.yaml
evals/fixtures/terragoat/: main.tf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DiffViewer.tsx  FindingDrawer.tsx  Navbar.tsx  SeverityBadge.tsx  TrendsChart.tsx
frontend/src/pages/: Dashboard.tsx  ScanDetail.tsx  ScansList.tsx
frontend/src/store/: index.ts
src/sentinel/: __init__.py  __main__.py  cli.py  config.py  eval_report.py  models.py  normalize.py
src/sentinel/api/: main.py  sse.py  worker.py
src/sentinel/enrich/: __init__.py  batcher.py  compliance.py  converter.py  explain.py  llm.py  pipeline.py  prioritize.py
src/sentinel/migrations/: env.py
src/sentinel/rag/: cli.py  db.py  embeddings.py  ingest.py  models.py  retrieve.py
src/sentinel/remediate/: __init__.py  agent.py  tools.py
src/sentinel/scanners/: __init__.py  base.py  checkov.py  (+6 more)
tests/: test_cli.py  test_enrich.py  test_normalize.py  test_rag.py  test_remediate.py
(+14 files in other folders)
