[project]
name = "sentinel-iac"
version = "0.1.0"
description = "AI-Augmented IaC Misconfiguration Scanner & Auto-Remediator"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15,<1",
    "structlog>=24.4,<25",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "httpx>=0.28,<1",
    "PyYAML>=6.0,<7",
    "rich>=13.9,<16",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.uv]
package = true

[project.scripts]
sentinel = "sentinel.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
